# streamlit-mialbarinov

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: make_data.py  temperature_data.csv  temperature_data1.csv
project/: main.py
services/: open_weather_map.py
